; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/bpf/extr_hashmap.c_hashmap_find_entry.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/bpf/extr_hashmap.c_hashmap_find_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashmap = type { i32, i64 (i32, i8*, i32)*, %struct.hashmap_entry** }
%struct.hashmap_entry = type { i32, %struct.hashmap_entry* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hashmap*, i8*, i64, %struct.hashmap_entry***, %struct.hashmap_entry**)* @hashmap_find_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hashmap_find_entry(%struct.hashmap* %0, i8* %1, i64 %2, %struct.hashmap_entry*** %3, %struct.hashmap_entry** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.hashmap*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.hashmap_entry***, align 8
  %11 = alloca %struct.hashmap_entry**, align 8
  %12 = alloca %struct.hashmap_entry*, align 8
  %13 = alloca %struct.hashmap_entry**, align 8
  store %struct.hashmap* %0, %struct.hashmap** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store %struct.hashmap_entry*** %3, %struct.hashmap_entry**** %10, align 8
  store %struct.hashmap_entry** %4, %struct.hashmap_entry*** %11, align 8
  %14 = load %struct.hashmap*, %struct.hashmap** %7, align 8
  %15 = getelementptr inbounds %struct.hashmap, %struct.hashmap* %14, i32 0, i32 2
  %16 = load %struct.hashmap_entry**, %struct.hashmap_entry*** %15, align 8
  %17 = icmp ne %struct.hashmap_entry** %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %60

19:                                               ; preds = %5
  %20 = load %struct.hashmap*, %struct.hashmap** %7, align 8
  %21 = getelementptr inbounds %struct.hashmap, %struct.hashmap* %20, i32 0, i32 2
  %22 = load %struct.hashmap_entry**, %struct.hashmap_entry*** %21, align 8
  %23 = load i64, i64* %9, align 8
  %24 = getelementptr inbounds %struct.hashmap_entry*, %struct.hashmap_entry** %22, i64 %23
  store %struct.hashmap_entry** %24, %struct.hashmap_entry*** %13, align 8
  %25 = load %struct.hashmap_entry**, %struct.hashmap_entry*** %13, align 8
  %26 = load %struct.hashmap_entry*, %struct.hashmap_entry** %25, align 8
  store %struct.hashmap_entry* %26, %struct.hashmap_entry** %12, align 8
  br label %27

27:                                               ; preds = %53, %19
  %28 = load %struct.hashmap_entry*, %struct.hashmap_entry** %12, align 8
  %29 = icmp ne %struct.hashmap_entry* %28, null
  br i1 %29, label %30, label %59

30:                                               ; preds = %27
  %31 = load %struct.hashmap*, %struct.hashmap** %7, align 8
  %32 = getelementptr inbounds %struct.hashmap, %struct.hashmap* %31, i32 0, i32 1
  %33 = load i64 (i32, i8*, i32)*, i64 (i32, i8*, i32)** %32, align 8
  %34 = load %struct.hashmap_entry*, %struct.hashmap_entry** %12, align 8
  %35 = getelementptr inbounds %struct.hashmap_entry, %struct.hashmap_entry* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load i8*, i8** %8, align 8
  %38 = load %struct.hashmap*, %struct.hashmap** %7, align 8
  %39 = getelementptr inbounds %struct.hashmap, %struct.hashmap* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = call i64 %33(i32 %36, i8* %37, i32 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %52

43:                                               ; preds = %30
  %44 = load %struct.hashmap_entry***, %struct.hashmap_entry**** %10, align 8
  %45 = icmp ne %struct.hashmap_entry*** %44, null
  br i1 %45, label %46, label %49

46:                                               ; preds = %43
  %47 = load %struct.hashmap_entry**, %struct.hashmap_entry*** %13, align 8
  %48 = load %struct.hashmap_entry***, %struct.hashmap_entry**** %10, align 8
  store %struct.hashmap_entry** %47, %struct.hashmap_entry*** %48, align 8
  br label %49

49:                                               ; preds = %46, %43
  %50 = load %struct.hashmap_entry*, %struct.hashmap_entry** %12, align 8
  %51 = load %struct.hashmap_entry**, %struct.hashmap_entry*** %11, align 8
  store %struct.hashmap_entry* %50, %struct.hashmap_entry** %51, align 8
  store i32 1, i32* %6, align 4
  br label %60

52:                                               ; preds = %30
  br label %53

53:                                               ; preds = %52
  %54 = load %struct.hashmap_entry*, %struct.hashmap_entry** %12, align 8
  %55 = getelementptr inbounds %struct.hashmap_entry, %struct.hashmap_entry* %54, i32 0, i32 1
  store %struct.hashmap_entry** %55, %struct.hashmap_entry*** %13, align 8
  %56 = load %struct.hashmap_entry*, %struct.hashmap_entry** %12, align 8
  %57 = getelementptr inbounds %struct.hashmap_entry, %struct.hashmap_entry* %56, i32 0, i32 1
  %58 = load %struct.hashmap_entry*, %struct.hashmap_entry** %57, align 8
  store %struct.hashmap_entry* %58, %struct.hashmap_entry** %12, align 8
  br label %27

59:                                               ; preds = %27
  store i32 0, i32* %6, align 4
  br label %60

60:                                               ; preds = %59, %49, %18
  %61 = load i32, i32* %6, align 4
  ret i32 %61
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
